--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="manifest" href="./assets/manifest.json">
+    <!-- web app manifest -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
+    <link rel="manifest" href="/assets/icons/site.webmanifest">
+    <link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/assets/icons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="msapplication-config" content="/assets/favicon.ico/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+    <!--  -->
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -18,6 +28,7 @@
                     <div class="bottom-list">
                         <ul>
                             <li id="weather-nav">Weather</li>
+                            <li class="back">Back</li>
                             <li id="history-nav">Search History</li>
                         </ul>
                     </div>
@@ -29,7 +40,7 @@
                                 <span>12/12/12</span>
                             </p>
                             <p>
-                                <span>27 0 celcius</span>
+                                <span>29 <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="weather icon" width="30px"></span>
                                 <span>cloudy</span>
                             </p>
                         </div>
@@ -62,7 +73,8 @@
                                 <span>12/12/12</span>
                             </p>
                             <p>
-                                <span>27 0 celcius</span>
+                                <span>27 0 celcius
+                                </span>
                                 <span>cloudy</span>
                             </p>
                         </div>
