store data to local storage

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <div class="top">
                     <p class="current-weather"></p>
                     <p class="city"></p>
+                    <img class="img" src="" alt="">
                     <p class="current-temp"></p>
                 </div>
                 <div class="bottom">
@@ -85,7 +86,7 @@
                                 <span>cloudy</span>
                             </p>
                         </div>
-                        <div class="content">
+                        <div id="details" class="content">
                             <p>
                                 <span>New york</span>
                                 <span>12/12/12</span>
@@ -95,7 +96,7 @@
                                 <span>cloudy</span>
                             </p>
                         </div>
-                        <div class="content">
+                        <div id="details" class="content">
                             <p>
                                 <span>New york</span>
                                 <span>12/12/12</span>
