fetch localstorage data

--- a/index.html
+++ b/index.html
@@ -34,101 +34,19 @@
                 <div class="bottom">
                     <div class="bottom-list">
                         <ul>
-                            <li id="weather-nav">Weather</li>
+                            <li id="weather-nav" class="active">Weather</li>
                             <li class="back">Back</li>
                             <li id="history-nav">Search History</li>
-                            <li id="fetch">fetch</li>
                         </ul>
                     </div>
                     <!-- weather -->
                     <div class="weather">
-                        <div class="content">
-                            <p>
-                                <span>12:00 am</span>
-                                <span>12/12/12</span>
-                            </p>
-                            <p>
-                                <span><img src="http://openweathermap.org/img/wn/04d@2x.png" alt="weather icon" width="30%"></span>
-                                <span>cloudy 29</span>
-                            </p>
-                        </div>
-                        <div class="content">
-                            <p>
-                                <span>12:00 am</span>
-                                <span>12/12/12</span>
-                            </p>
-                            <p>
-                                <span>27 0 celcius</span>
-                                <span>cloudy</span>
-                            </p>
-                        </div>
-                        <div class="content">
-                            <p>
-                                <span>12:00 am</span>
-                                <span>12/12/12</span>
-                            </p>
-                            <p>
-                                <span>27 0 celcius</span>
-                                <span>cloudy</span>
-                            </p>
-                        </div>
                     </div>
                     <!-- history -->
                     <div class="history">
-                        <div id="details" class="content">
-                            <p>
-                                <span>New york</span>
-                                <span>12/12/12</span>
-                            </p>
-                            <p>
-                                <span>27 0 celcius
-                                </span>
-                                <span>cloudy</span>
-                            </p>
-                        </div>
-                        <div id="details" class="content">
-                            <p>
-                                <span>New york</span>
-                                <span>12/12/12</span>
-                            </p>
-                            <p>
-                                <span>27 0 celcius</span>
-                                <span>cloudy</span>
-                            </p>
-                        </div>
-                        <div id="details" class="content">
-                            <p>
-                                <span>New york</span>
-                                <span>12/12/12</span>
-                            </p>
-                            <p>
-                                <span>27 0 celcius</span>
-                                <span>cloudy</span>
-                            </p>
-                        </div>
                     </div>
                     <!-- history details -->
                     <div class="history-details">
-                        <div class="content">
-                            <p>
-                                <span>12:00 am</span>
-                                <span>12/12/12</span>
-                            </p>
-                            <p>
-                                <span>27 0 celcius</span>
-                                <span>cloudy</span>
-                            </p>
-                        </div>
-                        <div class="content">
-                            <p>
-                                <span>12:00 am</span>
-                                <span>12/12/12</span>
-                            </p>
-                            <p>
-                                <span>27 0 celcius</span>
-                                <span>cloudy</span>
-                            </p>
-                        </div> 
                     </div>
                 </div>
             </section>
