--- a/assets/index.html
+++ b/assets/index.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather-app</title>
     <!-- web app manifest -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
-    <link rel="manifest" href="/assets/icons/site.webmanifest">
-    <link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="/assets/icons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./icons/favicon-16x16.png">
+    <link rel="manifest" href="./icons/site.webmanifest">
+    <link rel="mask-icon" href="./icons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="./icons/favicon.ico">
     <meta name="msapplication-TileColor" content="#2b5797">
-    <meta name="msapplication-config" content="/assets/favicon.ico/browserconfig.xml">
+    <meta name="msapplication-config" content="./icons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <!--  -->
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300&display=swap" rel="stylesheet">
     <!-- fontawesome -->
@@ -65,7 +65,7 @@
         if (navigator.serviceWorker) {
             try {
                 window.addEventListener('load', async () => {
-                    const register = await navigator.serviceWorker.register('/assets/js/index.sw.js');
+                    const register = await navigator.serviceWorker.register('./js/index.sw.js');
                     console.log('registration', register.scope)
                     console.log('register')
                 });
@@ -76,11 +76,11 @@
 
         }
     </script>
-    <script src="./assets/js/time.js"></script>
+    <script src="./js/time.js"></script>
     <!-- <script src="./assets/js/index.js"></script> -->
-    <script src="./assets/js/controlElements.js"></script>
-    <script src="./assets/js/fetch.js"></script>
-    <script src="./assets/js/index.sw.js"></script>
+    <script src="./js/controlElements.js"></script>
+    <script src="./js/fetch.js"></script>
+    <script src="./js/index.sw.js"></script>
 </body>
 
 </html>
