--- a/assets/index.html
+++ b/assets/index.html
@@ -41,7 +41,7 @@
                 <div class="bottom">
                     <div class="bottom-list">
                         <ul>
-                            <li id="weather-nav" class="active">Weather</li>
+                            <li id="weather-nav" class="active">Current Weather</li>
                             <li class="back"><i class="fas fa-arrow-left"></i></li>
                             <li id="history-nav">Search History</li>
                         </ul>
