more bugs created :cry:

--- a/assets/index.html
+++ b/assets/index.html
@@ -77,7 +77,7 @@
         }
     </script>
     <script src="./js/time.js"></script>
-    <!-- <script src="./assets/js/index.js"></script> -->
+    <script src="./js/index.js"></script>
     <script src="./js/controlElements.js"></script>
     <script src="./js/fetch.js"></script>
     <script src="./js/index.sw.js"></script>
