--- a/assets/index.html
+++ b/assets/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="'Smash It' outdoor events will be hosted in NYC in the coming months. This weather app information will be a determinant if the event will hold or not.">
     <title>Weather-app</title>
     <!-- web app manifest -->
     <link rel="apple-touch-icon" sizes="180x180" href="./icons/apple-touch-icon.png">
