--- a/assets/404.html
+++ b/assets/404.html
@@ -28,7 +28,7 @@
             <section>
                 <div class="not-found">
                     <img src="./images/404.png" alt="404 image">
-                    <a href="/assets/">go back home</a>
+                    <a href="/">go back home</a>
                 </div>
             </section>
         </section>
