--- a/assets/index.html
+++ b/assets/index.html
@@ -54,7 +54,7 @@
                     </div>
                     <!-- history -->
                     <div class="history">
-                        <img class="no-data" src="./empty.png" alt="no data">
+                        <img class="no-data" src="./images/empty.png" alt="no data">
                     </div>
                     <!-- history details -->
                     <div class="history-details">
