fix-debounce_404-page

--- a/assets/404.html
+++ b/assets/404.html
@@ -27,7 +27,9 @@
         <section class="container">
             <section>
                 <div class="not-found">
+                    <div>
                     <img src="./images/404.png" alt="404 image">
+                    </div>
                     <a href="/">go back home</a>
                 </div>
             </section>
