--- a/assets/index.html
+++ b/assets/index.html
@@ -32,7 +32,7 @@
             <section class="left-column">
                 <div class="top">
                     <div class="search-div">
-                        <input type="text" placeholder="Location" class="search-input" onblur=latLng(this.value)>
+                        <input type="text" placeholder="Location" class="search-input">
                         <span class="search-btn" onclick=getWeather()><i class="fas fa-search-location"></i></span>
                     </div>
                     <p class="current-weather"></p>
