--- a/assets/index.html
+++ b/assets/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="'Smash It' outdoor events will be hosted in NYC in the coming months. This weather app information will be a determinant if the event will hold or not.">
+        <meta name="image" content="https://res.cloudinary.com/project-s/image/upload/v1599765367/weather_app_qrcluc.png">
     <title>Weather-app</title>
     <!-- web app manifest -->
     <link rel="apple-touch-icon" sizes="180x180" href="./icons/apple-touch-icon.png">
